# BachelorNordicSemi

./: README.md
app/: README.md
app/samples/: first_page_logo  loading.dart  main.dart  page1-to-page2  read_data_firestore_saodat_sampl1
app/samples/chart/: ReadME.md.txt  barChart.dart  lineChart.dart  main.dart  multiLineChart.dart
app/samples/dialog/: main.dart  simpleDialog.dart
app/samples/flutter_first_test/: README.md  pubspec.yaml
app/samples/flutter_first_test/assets/: jellyfish.jfif
app/samples/flutter_first_test/integration_test/: app_test.dart
app/samples/flutter_first_test/lib/: dashboard.dart  home.dart  loading.dart  main.dart
app/samples/flutter_first_test/test/: widget_test.dart
app/samples/map_feature_sample/: .flutter-plugins  .flutter-plugins-dependencies  .packages  pubspec.yaml
app/samples/map_feature_sample/.dart_tool/: package_config.json  package_config_subset
app/samples/map_feature_sample/lib/: main.dart
app/samples/menu_dashboard/: pubspec.yaml
app/samples/menu_dashboard/lib/: main.dart  menu_dashboard_layout.dart
app/samples/menu_dashboard_nav/: pubspec.yaml
app/samples/menu_dashboard_nav 2(new)/: README.md  pubspec.yaml
app/samples/menu_dashboard_nav/lib/: main.dart
app/samples/menu_dashboard_nav/test/: widget_test.dart
app/samples/oasys_app/lib/: main.dart
app/samples/sidebar/: drawer.dart  nagigatorPage.dart
app/samples/testApp/: README.md  local.properties  pubspec.yaml
app/samples/testApp/integration_test/: app_test.dart
app/samples/testApp/lib/: main.dart
app/samples/testApp/test/: widget_test.dart
embedded/arduino/ESP32_OASYS_WEB/: platformio.ini
embedded/arduino/ESP8266_UART_v2/: ESP8266_UART_v2.ino
embedded/arduino/OASYS_ESP_WEB/: OASYS_ESP_WEB.ino  fullpage.h  index.html  materialize.h  materialize.html  materialize_smaller.h  some.h  test.html  website.h
embedded/arduino/OASYS_Sensor/: OASYS_Sensor.ino
embedded/arduino/UART/: UART.ino
embedded/arduino/UART_ESP8266/: UART_ESP8266.ino
embedded/arduino/UART_MQTT_ESP8266/: UART_MQTT_ESP8266.ino
embedded/arduino/UART_new/: UART_new.ino
embedded/arduino/UART_new_ESP8266/: UART_new_ESP8266.ino
embedded/arduino/ZipSample/: index.html
embedded/release/: README.md
embedded/samples/GCLOUD/gcloud_latest/: CMakeLists.txt  prj.conf
embedded/samples/GCLOUD/gcloud_latest/include/: cJSON.h
embedded/samples/GCLOUD/gcloud_latest/src/: main.c  ntp.c
embedded/samples/GCLOUD/gcloud_latest/src/private_info/: .gitignore  key.c  nrf9160dk-cert.pem  nrf9160dk-private.pem
embedded/samples/GCLOUD/gcloud_old/: CMakeLists.txt  Kconfig  prj.conf
embedded/samples/GCLOUD/gcloud_old/src/: cJSON.c  gcloud.c
embedded/samples/GCLOUD/gcloud_old/src/private_info/: create_keys.sh
embedded/samples/adc_sample/: CMakeLists.txt  prj.conf
embedded/samples/adc_test/: CMakeLists.txt  prj.conf
embedded/samples/digital_IO/: Kconfig
embedded/samples/fat_fs/: CMakeLists.txt  prj.conf
embedded/samples/fat_fs_ovrebekk/: nrf9160dk_nrf9160ns.overlay  prj.conf
embedded/samples/gcloud_latest/: Kconfig  prj.conf
embedded/samples/gcloud_mqtt_poll/: prj.conf
embedded/samples/gps/: prj.conf
embedded/samples/i2c/: CMakeLists.txt  prj.conf
embedded/samples/lpuart/: prj.conf
embedded/samples/mqtt_UART/: CMakeLists.txt  prj.conf
embedded/samples/mqtt_button_organized/: CMakeLists.txt
embedded/samples/mqtt_button_organized/src/: app_button.c  app_mqtt.c
embedded/samples/mqtt_button_web_led/: prj.conf
embedded/samples/mqtt_hivemq/: main.c
embedded/samples/mqtt_simple/: prj.conf
embedded/samples/nrf_google_iot_core-master/: CMakeLists.txt  Kconfig  prj.conf
embedded/samples/nrfgcloud/: README.rst
embedded/samples/nrfgcloud_new/: prj.conf
embedded/samples/pathfinder/: CMakeLists.txt
embedded/samples/pathfinder/src/ui/include/: ui.h
embedded/samples/simple_button_v2/: prj.conf
embedded/samples/spi/: prj.conf
embedded/samples/uart/: prj.conf
embedded/test/gcloud_new_test/: CMakeLists.txt  Kconfig  prj.conf
embedded/test/gcloud_new_test/include/: gcloud.h  gcloud_defines.h  ntp.h
embedded/test/gcloud_new_test/src/: gcloud.c  main.c  ntp.c
embedded/test/include/: app_button.h  app_mqtt.h
embedded/test/mqtt_UART/: CMakeLists.txt  example_uart_data.txt
embedded/test/mqtt_UART/include/: app_button.h  app_gps.h  app_mqtt.h  app_uart.h
embedded/test/mqtt_UART/src/: app_button.c  app_mqtt.c  app_uart.c  main.c
embedded/test/uart_mqtt_gps/: CMakeLists.txt  Kconfig  prj.conf
embedded/test/uart_mqtt_gps/boards/: nrf9160dk_nrf9160ns.overlay
embedded/test/uart_mqtt_gps/include/: app_button.h  app_gps.h  app_mqtt.h  app_sd.h  app_uart.h  gcloud.h
embedded/test/uart_mqtt_gps/src/: app_button.c  app_gps.c  app_mqtt.c  app_sd.c  app_uart.c  gcloud.c  main.c
web/firebase_function/: .firebaserc
web/firebase_function/functions/: index.js  package-lock.json  package.json
web/oasys_firebase_functions/: .firebaserc
web/oasys_firebase_functions/functions/: index.js  package-lock.json
web/samples/JSONtoXLSX/: index.html
web/samples/scrollLock/: index.html  main.js  styles.css
web/simulation_demo/: index.html
web/simulation_demo/css/: style.css
web/simulation_demo/js/: app.js  mqtt.js
web/simulation_demo_v2/: index.html
web/simulation_demo_v2/css/: style.css
web/simulation_demo_v2/js/: app.js  slider.js
web/simulation_demo_v3/: index.html
web/simulation_demo_v3/css/: commands.css  data.css  indicators.css  mainContent.css  style.css
web/simulation_demo_v3/js/: app.js  database.js  mqtt.js  slider.js
web/web_mqtt_test/: app.js  index.html
web/web_mqtt_test/css/: style.css
web/web_v0/: .gitignore  package-lock.json  package.json  tailwind.config.js
web/web_v0/.firebase/: hosting.cHVibGlj.cache
web/web_v0/Wiki_web/: Cloud_Functions.md  Google_IoT.md  Website.md
web/web_v0/public/: 404.html  about.html  device.html  header.html  home.html  index.html  styles.css
(+234 files in other folders)
